tests/NormalTests/paczka1/small_fuzzy/24226783.err
Error in line 1: doyQSmBwyjJ S531 99,4
Error in line 5: Prws A390 20,2
